Bugs resolved functions.py - getDesktopEnvironment did not resolve KDE correctly.

--- a/usr/lib/device-driver-manager/ddm.conf
+++ b/usr/lib/device-driver-manager/ddm.conf
@@ -2,7 +2,7 @@
 version = 0.1.0
 author = Schoelje
 email = schoelje@hotmail.nl
-home = http://www.schoelje.nl
+home = http://www.linuxmint.com
 comments = Currently Nvidia, ATI and Broadcom drivers are supported and it detects multi-core 32-bit systems so that the PAE kernel can be installed.
 
 [Paths]
