--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,11 +1,11 @@
-Package: device-driver-manager
-Version: 0.2.4
+Package: ddm
+Version: 0.5.0
 Architecture: all
-Maintainer: Schoelje <schoelje@hotmail.nl>
-Installed-Size: 216
-Depends: python (>= 2.7), python-gtk2, python-glade2, aptitude, wireless-tools, apt, dpkg, pciutils, debconf
+Maintainer: Schoelje <schoelje@schoelje.nl>
+Installed-Size: 195
+Depends: python (>= 2.7), python-gtk2, python-glade2, aptitude, wireless-tools, apt, dpkg, pciutils, debconf, lsof
 Section: admin
 Priority: optional
-Description: Device driver manager
+Description: Device Driver Manager
  Device Driver Manager is a tool to help users installing third-party hardware drivers.
  Currently Nvidia, ATI and Broadcom drivers can be installed and allows to install the PAE kernel for multi-core 32-bit systems.
