--- a/usr/lib/ddm/ddm.conf
+++ b/usr/lib/ddm/ddm.conf
@@ -1,5 +1,6 @@
 [COLORS]
-title_bg = #585858
+title_fg = #FFFFFF
+title_bg = #4F4F4F
 menu_select = #ABD6F4
 menu_hover = #DFECF4
 menu_bg = #FFFFFF
