Adjustments to fit new theming

--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -3,7 +3,7 @@ Categories=Settings;
 Comment=Device Driver Manager
 Encoding=UTF-8
 Exec=ddm
-Icon=/usr/share/ddm/logo.png
+Icon=ddm
 Name=Device Driver Manager
 StartupNotify=false
 Terminal=false
