Improved po integration

--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -1,10 +1,12 @@
 [Desktop Entry]
 Categories=Settings;
 Comment=Device Driver Manager
+Comment[nl]=Device Driver Manager
 Encoding=UTF-8
 Exec=ddm
 Icon=ddm
 Name=Device Driver Manager
+Name[nl]=Device Driver Manager
 StartupNotify=false
 Terminal=false
 Type=Application
