--- a/debian/control
+++ b/debian/control
@@ -1,17 +1,30 @@
 Source: ddm
 Section: admin
 Priority: optional
-Maintainer: Schoelje <schoelje@solydxk.com>
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.7.2
+Maintainer: Arjen Balfoort <arjenbalfoort@solydxk.com>
+Build-Depends: debhelper (>= 9)
+  , python
+  , intltool
+X-Python-Version: >= 2.7
+Standards-Version: 3.9.5
+Vcs-Git: git://github.com/SolydXK/ddm.git
+Vcs-Browser: https://github.com/SolydXK/ddm
 
 Package: ddm
 Architecture: all
-Maintainer: Schoelje <schoelje@solydxk.com>
-Installed-Size: 216
-Depends: python (>= 2.7), python-gtk2, python-glade2, aptitude, wireless-tools, apt, dpkg, pciutils, debconf, lsof
-Section: admin
-Priority: optional
+Depends: ${misc:Depends}, ${python:Depends}
+  , python (>= 2.7), python (<< 3)
+  , python-gtk2
+  , python-glade2
+  , aptitude
+  , wireless-tools
+  , apt
+  , dpkg
+  , pciutils
+  , debconf
+  , lsof
+Conflicts: solydxk-locale
+Replaces: solydxk-locale
 Description: Device driver manager
  Device Driver Manager is a tool to help users installing third-party hardware drivers.
  Currently Nvidia, ATI and Broadcom drivers can be installed and allows to install the PAE kernel for multi-core 32-bit systems.
