--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Vcs-Browser: https://github.com/SolydXK/ddm
 
 Package: ddm
 Architecture: all
-Depends: ${misc:Depends}, ${python3:Depends}
+Depends: ${misc:Depends}
   , python3
   , python3-gi
   , gir1.2-webkit-3.0
