--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -1,12 +1,14 @@
 [Desktop Entry]
 Categories=Settings;X-XFCE-SettingsDialog;X-XFCE-HardwareSettings;
 Comment=Device Driver Manager
+Comment[ca]=Device Driver Manager
 Comment[fr]=Device Driver Manager
 Comment[nl]=Device Driver Manager
 Encoding=UTF-8
 Exec=ddm
 Icon=ddm
 Name=Device Driver Manager
+Name[ca]=Device Driver Manager
 Name[fr]=Device Driver Manager
 Name[nl]=Device Driver Manager
 StartupNotify=false
