--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9)
   , python3 (>= 3.2)
   , intltool
 X-Python3-Version: >= 3.2
-Standards-Version: 3.9.5
+Standards-Version: 3.9.6
 Vcs-Git: git://github.com/SolydXK/ddm.git
 Vcs-Browser: https://github.com/SolydXK/ddm
 
@@ -28,5 +28,7 @@ Depends: ${misc:Depends}
 Conflicts: solydxk-locale
 Replaces: solydxk-locale
 Description: Device driver manager
- Device Driver Manager is a tool to help users installing third-party hardware drivers.
- Currently Nvidia, ATI and Broadcom drivers can be installed and allows to install the PAE kernel for multi-core 32-bit systems.
+ Device Driver Manager is a tool to help users installing third-party
+ hardware drivers.
+ Currently Nvidia, ATI and Broadcom drivers can be installed and allow
+ to install the PAE kernel for multi-core 32-bit systems.
