Use DDM in terminal

--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -3,7 +3,9 @@ Categories=Settings;X-XFCE-SettingsDialog;X-XFCE-HardwareSettings;
 Comment=Device Driver Manager
 Comment[ar]=مدير تعريف الأجهزة
 Comment[ca]=Device Driver Manager
+Comment[de]=Device Driver Manager
 Comment[fr]=Device Driver Manager
+Comment[it]=Device Driver Manager
 Comment[nl]=Device Driver Manager
 Encoding=UTF-8
 Exec=ddm
@@ -11,7 +13,9 @@ Icon=ddm
 Name=Device Driver Manager
 Name[ar]=مدير تعريف الأجهزة
 Name[ca]=Device Driver Manager
+Name[de]=Device Driver Manager
 Name[fr]=Device Driver Manager
+Name[it]=Device Driver Manager
 Name[nl]=Device Driver Manager
 StartupNotify=false
 Terminal=false
