--- a/usr/share/kde4/services/kcm_device_driver_manager.desktop
+++ b/usr/share/kde4/services/kcm_device_driver_manager.desktop
@@ -12,10 +12,14 @@ Categories=Qt;KDE;X-KDE-settings-hardware;
 Name=Device Driver Manager
 Name[ar]=مدير تعريف الأجهزة
 Name[ca]=Device Driver Manager
+Name[de]=Device Driver Manager
 Name[fr]=Device Driver Manager
+Name[it]=Device Driver Manager
 Name[nl]=Device Driver Manager
 Comment=Device Driver Manager
 Comment[ar]=مدير تعريف الأجهزة
 Comment[ca]=Device Driver Manager
+Comment[de]=Device Driver Manager
 Comment[fr]=Device Driver Manager
+Comment[it]=Device Driver Manager
 Comment[nl]=Device Driver Manager
