Support Radeon R/FirePro/FireGl cards

--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -4,9 +4,11 @@ Comment=Device Driver Manager
 Comment[ar]=مدير تعريف الأجهزة
 Comment[ca]=Device Driver Manager
 Comment[de]=Device Driver Manager
+Comment[es]=Administrador de Drivers de Dispositivos
 Comment[fr]=Device Driver Manager
 Comment[it]=Device Driver Manager
 Comment[nl]=Device Driver Manager
+Comment[ru]=Менеджер драйверов устройств
 Encoding=UTF-8
 Exec=ddm
 Icon=ddm
@@ -14,9 +16,11 @@ Name=Device Driver Manager
 Name[ar]=مدير تعريف الأجهزة
 Name[ca]=Device Driver Manager
 Name[de]=Device Driver Manager
+Name[es]=Administrador de Drivers de Dispositivos
 Name[fr]=Device Driver Manager
 Name[it]=Device Driver Manager
 Name[nl]=Device Driver Manager
+Name[ru]=Менеджер драйверов устройств
 StartupNotify=false
 Terminal=false
 Type=Application
