--- a/usr/share/kde4/services/kcm_device_driver_manager.desktop
+++ b/usr/share/kde4/services/kcm_device_driver_manager.desktop
@@ -13,13 +13,17 @@ Name=Device Driver Manager
 Name[ar]=مدير تعريف الأجهزة
 Name[ca]=Device Driver Manager
 Name[de]=Device Driver Manager
+Name[es]=Administrador de Drivers de Dispositivos
 Name[fr]=Device Driver Manager
 Name[it]=Device Driver Manager
 Name[nl]=Device Driver Manager
+Name[ru]=Менеджер драйверов устройств
 Comment=Device Driver Manager
 Comment[ar]=مدير تعريف الأجهزة
 Comment[ca]=Device Driver Manager
 Comment[de]=Device Driver Manager
+Comment[es]=Administrador de Drivers de Dispositivos
 Comment[fr]=Device Driver Manager
 Comment[it]=Device Driver Manager
 Comment[nl]=Device Driver Manager
+Comment[ru]=Менеджер драйверов устройств
