--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -7,7 +7,10 @@ Comment[de]=Device Driver Manager
 Comment[es]=Administrador de Drivers de Dispositivos
 Comment[fr]=Device Driver Manager
 Comment[it]=Device Driver Manager
+Comment[ja]=デバイスドライバーマネージャー
 Comment[nl]=Device Driver Manager
+Comment[pl]=Menedżer sterowników
+Comment[pt_PT]=Gestor de Driver de Dispositivo
 Comment[ru]=Менеджер драйверов устройств
 Encoding=UTF-8
 Exec=ddm
@@ -19,7 +22,10 @@ Name[de]=Device Driver Manager
 Name[es]=Administrador de Drivers de Dispositivos
 Name[fr]=Device Driver Manager
 Name[it]=Device Driver Manager
+Name[ja]=デバイスドライバーマネージャー
 Name[nl]=Device Driver Manager
+Name[pl]=Menedżer sterowników
+Name[pt_PT]=Gestor de Driver de Dispositivo
 Name[ru]=Менеджер драйверов устройств
 StartupNotify=false
 Terminal=false
