--- a/usr/share/kde4/services/kcm_device_driver_manager.desktop
+++ b/usr/share/kde4/services/kcm_device_driver_manager.desktop
@@ -16,7 +16,10 @@ Name[de]=Device Driver Manager
 Name[es]=Administrador de Drivers de Dispositivos
 Name[fr]=Device Driver Manager
 Name[it]=Device Driver Manager
+Name[ja]=デバイスドライバーマネージャー
 Name[nl]=Device Driver Manager
+Name[pl]=Menedżer sterowników
+Name[pt_PT]=Gestor de Driver de Dispositivo
 Name[ru]=Менеджер драйверов устройств
 Comment=Device Driver Manager
 Comment[ar]=مدير تعريف الأجهزة
@@ -25,5 +28,8 @@ Comment[de]=Device Driver Manager
 Comment[es]=Administrador de Drivers de Dispositivos
 Comment[fr]=Device Driver Manager
 Comment[it]=Device Driver Manager
+Comment[ja]=デバイスドライバーマネージャー
 Comment[nl]=Device Driver Manager
+Comment[pl]=Menedżer sterowników
+Comment[pt_PT]=Gestor de Driver de Dispositivo
 Comment[ru]=Менеджер драйверов устройств
