--- a/usr/share/kde4/services/kcm_device_driver_manager.desktop
+++ b/usr/share/kde4/services/kcm_device_driver_manager.desktop
@@ -17,6 +17,7 @@ Name[es]=Administrador de Drivers de Dispositivos
 Name[fr]=Device Driver Manager
 Name[it]=Device Driver Manager
 Name[ja]=デバイスドライバーマネージャー
+Name[nb]=Device Driver Manager
 Name[nl]=Device Driver Manager
 Name[pl]=Menedżer sterowników
 Name[pt_PT]=Gestor de Driver de Dispositivo
@@ -29,6 +30,7 @@ Comment[es]=Administrador de Drivers de Dispositivos
 Comment[fr]=Device Driver Manager
 Comment[it]=Device Driver Manager
 Comment[ja]=デバイスドライバーマネージャー
+Comment[nb]=Device Driver Manager
 Comment[nl]=Device Driver Manager
 Comment[pl]=Menedżer sterowników
 Comment[pt_PT]=Gestor de Driver de Dispositivo
