--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -8,6 +8,7 @@ Comment[es]=Administrador de Drivers de Dispositivos
 Comment[fr]=Device Driver Manager
 Comment[it]=Device Driver Manager
 Comment[ja]=デバイスドライバーマネージャー
+Comment[nb]=Device Driver Manager
 Comment[nl]=Device Driver Manager
 Comment[pl]=Menedżer sterowników
 Comment[pt_PT]=Gestor de Driver de Dispositivo
@@ -23,6 +24,7 @@ Name[es]=Administrador de Drivers de Dispositivos
 Name[fr]=Device Driver Manager
 Name[it]=Device Driver Manager
 Name[ja]=デバイスドライバーマネージャー
+Name[nb]=Device Driver Manager
 Name[nl]=Device Driver Manager
 Name[pl]=Menedżer sterowników
 Name[pt_PT]=Gestor de Driver de Dispositivo
