Fix --force-yes for Stretch

--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -4,6 +4,7 @@ Comment=Device Driver Manager
 Comment[ar]=مدير تعريف الأجهزة
 Comment[ca]=Device Driver Manager
 Comment[de]=Device Driver Manager
+Comment[en_AU]=Device Driver Manager
 Comment[es]=Administrador de Drivers de Dispositivos
 Comment[fr]=Device Driver Manager
 Comment[it]=Device Driver Manager
@@ -13,6 +14,7 @@ Comment[nl]=Device Driver Manager
 Comment[pl]=Menedżer sterowników
 Comment[pt_PT]=Gestor de Driver de Dispositivo
 Comment[ru]=Менеджер драйверов устройств
+Comment[tr]=Aygıt Sürücüsü Yöneticisi
 Encoding=UTF-8
 Exec=ddm
 Icon=ddm
@@ -20,6 +22,7 @@ Name=Device Driver Manager
 Name[ar]=مدير تعريف الأجهزة
 Name[ca]=Device Driver Manager
 Name[de]=Device Driver Manager
+Name[en_AU]=Device Driver Manager
 Name[es]=Administrador de Drivers de Dispositivos
 Name[fr]=Device Driver Manager
 Name[it]=Device Driver Manager
@@ -29,6 +32,7 @@ Name[nl]=Device Driver Manager
 Name[pl]=Menedżer sterowników
 Name[pt_PT]=Gestor de Driver de Dispositivo
 Name[ru]=Менеджер драйверов устройств
+Name[tr]=Aygıt Sürücüsü Yöneticisi
 StartupNotify=false
 Terminal=false
 Type=Application
