Updated Broadcom hardware list

--- a/usr/share/kde4/services/kcm_device_driver_manager.desktop
+++ b/usr/share/kde4/services/kcm_device_driver_manager.desktop
@@ -18,6 +18,7 @@ Name[es]=Administrador de Drivers de Dispositivos
 Name[fr]=Device Driver Manager
 Name[it]=Device Driver Manager
 Name[ja]=デバイスドライバーマネージャー
+Name[lt]=Įrenginių tvarkyklių tvarkytuvė
 Name[nb]=Device Driver Manager
 Name[nl]=Device Driver Manager
 Name[pl]=Menedżer sterowników
@@ -33,6 +34,7 @@ Comment[es]=Administrador de Drivers de Dispositivos
 Comment[fr]=Device Driver Manager
 Comment[it]=Device Driver Manager
 Comment[ja]=デバイスドライバーマネージャー
+Comment[lt]=Įrenginių tvarkyklių tvarkytuvė
 Comment[nb]=Device Driver Manager
 Comment[nl]=Device Driver Manager
 Comment[pl]=Menedżer sterowników
