--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -9,6 +9,7 @@ Comment[es]=Administrador de Drivers de Dispositivos
 Comment[fr]=Device Driver Manager
 Comment[it]=Device Driver Manager
 Comment[ja]=デバイスドライバーマネージャー
+Comment[lt]=Įrenginių tvarkyklių tvarkytuvė
 Comment[nb]=Device Driver Manager
 Comment[nl]=Device Driver Manager
 Comment[pl]=Menedżer sterowników
@@ -27,6 +28,7 @@ Name[es]=Administrador de Drivers de Dispositivos
 Name[fr]=Device Driver Manager
 Name[it]=Device Driver Manager
 Name[ja]=デバイスドライバーマネージャー
+Name[lt]=Įrenginių tvarkyklių tvarkytuvė
 Name[nb]=Device Driver Manager
 Name[nl]=Device Driver Manager
 Name[pl]=Menedżer sterowników
