--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Categories=Settings;X-XFCE-SettingsDialog;X-XFCE-HardwareSettings;
+Categories=Settings;System;X-XFCE-SettingsDialog;X-XFCE-HardwareSettings;
 Comment=Device Driver Manager
 Comment[ar]=مدير تعريف الأجهزة
 Comment[ca]=Device Driver Manager
