Added Serbian translations

--- a/usr/share/kde4/services/kcm_device_driver_manager.desktop
+++ b/usr/share/kde4/services/kcm_device_driver_manager.desktop
@@ -24,6 +24,7 @@ Name[nl]=Device Driver Manager
 Name[pl]=Menedżer sterowników
 Name[pt_PT]=Gestor de Driver de Dispositivo
 Name[ru]=Менеджер драйверов устройств
+Name[sr]=Менаџер драјвера за уређаје
 Name[tr]=Aygıt Sürücüsü Yöneticisi
 Comment=Device Driver Manager
 Comment[ar]=مدير تعريف الأجهزة
@@ -40,4 +41,5 @@ Comment[nl]=Device Driver Manager
 Comment[pl]=Menedżer sterowników
 Comment[pt_PT]=Gestor de Driver de Dispositivo
 Comment[ru]=Менеджер драйверов устройств
+Comment[sr]=Менаџер драјвера за уређаје
 Comment[tr]=Aygıt Sürücüsü Yöneticisi
