--- a/usr/share/applications/ddm.desktop
+++ b/usr/share/applications/ddm.desktop
@@ -15,6 +15,7 @@ Comment[nl]=Device Driver Manager
 Comment[pl]=Menedżer sterowników
 Comment[pt_PT]=Gestor de Driver de Dispositivo
 Comment[ru]=Менеджер драйверов устройств
+Comment[sr]=Менаџер драјвера за уређаје
 Comment[tr]=Aygıt Sürücüsü Yöneticisi
 Encoding=UTF-8
 Exec=ddm
@@ -34,6 +35,7 @@ Name[nl]=Device Driver Manager
 Name[pl]=Menedżer sterowników
 Name[pt_PT]=Gestor de Driver de Dispositivo
 Name[ru]=Менеджер драйверов устройств
+Name[sr]=Менаџер драјвера за уређаје
 Name[tr]=Aygıt Sürücüsü Yöneticisi
 StartupNotify=false
 Terminal=false
